--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     },
     "dependencies": {
         "@stitches/react": "^1.2.8",
+        "axios": "^1.1.3",
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.4.3"
+        "react-router-dom": "^6.4.3",
+        "vite-plugin-environment": "^1.1.3"
     },
     "devDependencies": {
         "@types/node": "^18.11.9",
