--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dependencies": {
         "@stitches/react": "^1.2.8",
         "axios": "^1.1.3",
+        "immer": "^9.0.16",
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.39.3",
         "react-router-dom": "^6.4.3",
-        "vite-plugin-environment": "^1.1.3"
+        "vite-plugin-environment": "^1.1.3",
+        "zustand": "^4.1.4"
     },
     "devDependencies": {
         "@types/node": "^18.11.9",
