--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.0.1",
         "@stitches/react": "^1.2.8",
         "axios": "^1.1.3",
         "immer": "^9.0.16",
